Criação da main e das págias professores e fale_coosco

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 </head>
 <body>
   <header>
-    <h1>Olá mundo essa é minha rimeira página da web</h1>
+    <h1>Olá mundo essa é minha primeira página da web</h1>
     <nav>
       <ul>
-        <li>Home</li>
-        <li>Professores</li>
-        <li>Fale Conosco</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="professores.html">Professores</a></li>
+        <li><a href="fale_conosco.html">Fale Conosco</a></li>
       </ul>
     </nav>
   </header>
   <main>
-
+    <section>
+    <img src="fotos/fotohome.png" width="500" alt="Foto dos professores"/>
+    </section>
   </main>
   <footer>
 
