--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </section>
   </main>
   <footer>
-
+    <section>
+      <span>contato@devaria.com.br</span> <br>
+      <span>Conheca o nosso canal do Youtube!</span>
+    </section>
   </footer>
 </body>
 </html>
