Formulário Fale conosco

--- a/professores.html
+++ b/professores.html
@@ -29,9 +29,14 @@
         </div>
         <article>
           <h2>Dani & Rafa, Do & Fi</h2>
-          <p>Os professores são especialistas em <strong> desenvolvimeto de sistemas </strong> e possuem mais de <em> 10 anos de experiência.</em></p>
           <p>
-            Todas a aulas de Back e Front serão conduzidas mais pelo Rafa,Do e Fi e as aulas de Gestão e Operações ficará com o Dani.
+            Os professores são especialistas em
+            <strong> desenvolvimeto de sistemas </strong> e possuem mais de
+            <em> 10 anos de experiência.</em>
+          </p>
+          <p>
+            Todas a aulas de Back e Front serão conduzidas mais pelo Rafa,Do e
+            Fi e as aulas de Gestão e Operações ficará com o Dani.
           </p>
         </article>
       </section>
