--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Olá Mundo!</title>
-</head>
-<body>
-  <header>
-    <h1>Olá mundo essa é minha primeira página da web</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="professores.html">Professores</a></li>
-        <li><a href="fale_conosco.html">Fale Conosco</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section>
-    <img src="fotos/fotohome.png" width="500" alt="Foto dos professores"/>
-    </section>
-  </main>
-  <footer>
-    <section>
-      <span>contato@devaria.com.br</span> <br>
-      <span>Conheca o nosso canal do Youtube!</span>
-    </section>
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Olá Mundo!</title>
+  </head>
+  <body>
+    <header>
+      <h1>Olá mundo essa é minha primeira página da web</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="professores.html">Professores</a></li>
+          <li><a href="fale_conosco.html">Fale Conosco</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <img src="fotos/fotohome.png" width="500" alt="Foto dos professores" />
+      </section>
+    </main>
+    <footer>
+      <section>
+        <span>contato@devaria.com.br</span> <br />
+        <span>Conheca o nosso canal do Youtube!</span>
+      </section>
+    </footer>
+  </body>
 </html>
